* Version 0.5.1 (24 February 2004)
- Empty environment variables now are deleted from the environment instead
  of being set to "no value"
- Fixed bug causing a segmentation fault when using different suPHP_Engine 
  settings in vhosts (special thanks to Matthias Brunner for tracking down 
  this problem)
	
* Version 0.5 (10 January 2004)
- Apache 2.x support
- Portability to other *NIX systems improved by using more compatible
  system calls
- Improved logging
- Added "--with-setid-mode" compile time option (see doc/INSTALL for
  details)
- Apache 2.x version now supports direct header output
  (like "HTTP/1.0 401 ...")

* Version 0.3 (23 August 2003)
- Changed build system to GNU autoconf
- Supplementary groups are set correctly
- Optional support for environments with UIDs/GIDs not in the system's
  configuration files

* Version 0.2.3 (25 December 2002)
- Fixed handling of symlinks

* Version 0.2.2 (24 October 2002)
- Added missing file "suphp.h"

* Version 0.2.1 (20 October 2002)
- Fixed problems with "suPHP_ConfigPath"-option on some systems
- Added German documentation

* Version 0.2 (13 July 2002)
- Added support for VirtualHost based (de-)activation of suPHP
- Added support for concurrent use of different PHP configuration files

* Version 0.1 (04 June 2002)
- First release of suPHP