@@ -1,3 +1,7 @@
+* Current development version
+- Added support for UIDs/GIDs not listed in system configuration when using
+  "force" or "paranoid" mode
+
 * Version 0.5.1 (24 February 2004)
 - Empty environment variables now are deleted from the environment instead
   of being set to "no value"
